# unsloth-playground

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  deno.json  pyproject.toml
docs/: huggingface_repos.md  ignored_artifacts.md  ollama_model_conversion.md  runpod_training.md
marimo/: unsloth_ids.py
scripts/: get_jigmo_fonts.sh  get_mojidata.ts  ids_experiment.py  merge_gguf_qwen3vl.py  ollama_dataset_test.py  ollama_smoke_test.py
