[project]
name = "unsloth-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fonttools>=4.61.1",
    "huggingface-hub>=0.36.0",
    "ipython[black]>=9.8.0",
    "marimo>=0.18.4",
    "mlflow>=3.8.1",
    "python-lsp-server>=1.14.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "unsloth[windows]>=2025.12.6",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
unsloth = { git = "https://github.com/unslothai/unsloth.git" }
